# godot-2.5D-isometric-map-editor

./: .gitignore  .travis.yml  Android.mk  CMakeLists.txt  LICENSE  README.md  SConstruct
.README/: COMPILING_FROM_SOURCES.md  INSTALL.md  USER_GUIDE.md
.github/workflows/: check-pr.yaml  release.yaml
demo/: .gitignore  .gutconfig.json  CollisionTest.tscn  DynamicIsometricElement.tscn  README.md  engineButtonIcon.png.import  project.godot  run_tests.sh
demo/Assets/: License.txt
demo/Assets/Isometric/: arrowWall_E.png.import  arrowWall_N.png.import  arrowWall_S.png.import  arrowWall_W.png.import  arrow_E.png.import  arrow_N.png.import  arrow_S.png.import  arrow_W.png.import  ball.png.import  blockAngle_E.png.import  blockAngle_N.png.import  blockAngle_S.png.import  blockAngle_W.png.import  blockHalf_E.png.import  blockHalf_N.png.import  blockHalf_S.png.import  blockHalf_W.png.import  blockQuarter_E.png.import  blockQuarter_N.png.import  blockQuarter_S.png.import  blockQuarter_W.png.import  block_E.png.import  block_N.png.import  block_S.png.import  block_W.png.import  columnBlocks_E.png.import  columnBlocks_N.png.import  columnBlocks_S.png.import  columnBlocks_W.png.import  columnCorner_E.png.import  columnCorner_N.png.import  columnCorner_S.png.import  columnCorner_W.png.import  column_E.png.import  column_N.png.import  column_S.png.import  column_W.png.import  crate_E.png.import  crate_N.png.import  crate_S.png.import  (+201 more)
demo/Scripts/physics/: example_kinematic_body_autoshape_impl.gd  example_kinematic_body_impl.gd  example_kinematic_body_simple_impl.gd  example_static_body_autoshape_impl.gd  example_static_body_impl.gd  rolling_ball_body.gd
demo/addons/IsometricMap/: IsometricServer.tscn  isometric_map_inspector.gd  isometric_map_plugin.gd  map_edition_handler.gd  placeholder_inspector.gd  plugin.cfg
demo/test/: tests.tscn
demo/test/unit/: test_isometric_map.gd  (+3 more)
src/: IsometricServer.cpp  IsometricServer.h  IsometricWorld.cpp  IsometricWorld.h  _IsometricServer.cpp  _IsometricServer.h  gdlibrary.cpp  isometric_settings.h  isometric_utils.cpp  isometric_utils.h
src/containers/: Grid3D.cpp  Grid3D.h
src/editor/: OutlineDrawer.cpp  OutlineDrawer.h
src/helpers/: MathHelper.h
src/positionable/: DynamicIsometricElement.cpp  DynamicIsometricElement.h  IsometricElement.cpp  IsometricElement.h  IsometricMap.cpp  IsometricMap.h  IsometricPlaceholder.cpp  IsometricPlaceholder.h  IsometricPositionable.cpp  IsometricPositionable.h  IsometricTile.cpp  IsometricTile.h  PlaceholderType.cpp  PlaceholderType.h  StaticIsometricElement.cpp  StaticIsometricElement.h  isometric_map.cpp  isometric_map.h  isometric_positionable.cpp  isometric_positionable.h
(+235 files in other folders)
