cmake_minimum_required(VERSION 3.13)
project(IsometricMapEditor)

set(CMAKE_CXX_STANDARD 14)
set(OS "osx")
set(ARCH "")

link_directories("../godot-cpp/bin/")
include_directories("../godot-cpp/include/")
include_directories("../godot-cpp/include/core")
include_directories("../godot-cpp/include/gen")
include_directories("../godot-cpp/godot_headers")
add_library(GodotFmod SHARED src/positionable/isometric_positionable.cpp src/positionable/isometric_positionable.h src/gdlibrary.cpp src/isometric_utils.h src/isometric_utils.cpp src/isometric_settings.h src/positionable/isometric_map.h src/positionable/isometric_map.cpp)
if (${OS} EQUAL "osx")
    target_link_libraries(IsometricMapEditor libgodot-cpp.osx.64.a)
endif ()
if (${OS} EQUAL "windows")
    target_link_libraries(IsometricMapEditor libgodot-cpp.windows.64.lib)
endif ()
if (${OS} EQUAL "linux")
    target_link_libraries(IsometricMapEditor libgodot-cpp.linux.64.a)
endif()