cmake_minimum_required(VERSION 3.13)
project(IsometricMapEditor)

set(CMAKE_CXX_STANDARD 14)
set(OS "osx")
set(ARCH "")

link_directories("../godot-cpp/bin/")
include_directories("../godot-cpp/include/")
include_directories("../godot-cpp/include/core")
include_directories("../godot-cpp/include/gen")
include_directories("../godot-cpp/godot_headers")
include_directories("src")
include_directories("src/containers")
include_directories("src/helpers")
include_directories("src/positionable")
include_directories("src/editor")
add_library(GodotFmod SHARED src/positionable/IsometricPositionable.cpp src/positionable/IsometricPositionable.h src/gdlibrary.cpp src/_IsometricServer.h src/_IsometricServer.cpp src/positionable/IsometricMap.h src/positionable/IsometricMap.cpp src/IsometricServer.cpp src/IsometricServer.h src/containers/Grid3D.cpp src/containers/Grid3D.h src/positionable/IsometricTile.cpp src/positionable/IsometricTile.h src/positionable/IsometricPlaceholder.cpp src/positionable/IsometricPlaceholder.h src/positionable/PlaceholderType.cpp src/positionable/PlaceholderType.h src/helpers/MathHelper.h src/editor/OutlineDrawer.cpp src/editor/OutlineDrawer.h src/positionable/IsometricElement.cpp src/positionable/IsometricElement.h src/positionable/StaticIsometricElement.cpp src/positionable/StaticIsometricElement.h)
if (${OS} EQUAL "osx")
    target_link_libraries(IsometricMapEditor libgodot-cpp.osx.64.a)
endif ()
if (${OS} EQUAL "windows")
    target_link_libraries(IsometricMapEditor libgodot-cpp.windows.64.lib)
endif ()
if (${OS} EQUAL "linux")
    target_link_libraries(IsometricMapEditor libgodot-cpp.linux.64.a)
endif()